Regression: Sculpt mode tools not using the sculpt cursor #122856
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
FBX
Interest
Freestyle
Interest
Geometry Nodes
Interest
glTF
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#122856
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Win 10
Blender Version
Broken: blender-4.3.0-alpha+main.e114467a5463-windows.amd64-release
Worked: blender-4.2.0-alphamain.ffa363355db4-windows.amd64-release
broken by
03d3f2fa73
Short description of error
The sculpt mode tools are not using the sculpt cursor like the brushes... it switches to the regular arrow cursor instead...
Exact steps for others to reproduce the error
Go to sculpt mode and choose any of the tools (e.g. box mask/hide, gestures tools, filters, transform tools etc)
As you can see, they are using the regular arrow cursor...
Sculpt mode tools not using the sculpt cursorto Regression: Sculpt mode tools not using the sculpt cursorCaused by
03d3f2fa73
, CC @PratikPB2123Hi, this is intended. Non-brush tools won't have the "brush cursor". It is quite misleading sometimes. Eg: resizing brush with
F
when box hide tool is selected.Also the annotation tool cursor was not drawn when selected in sculpt mode (see #81948 / !122709).
We can change cursor to crosshair or knife of some "non-brush" tools.
Alright, thanks @PratikPB2123
And yes, I think it would be better to keep using the crosshair in sculpt mode...
I don't think think we need the knife tho...
@PratikPB2123 - While I agree that the brush cursor is generally misleading for these tools, an unintended side effect of this is that the radius is no longer visually apparent for the trim tools where it's used for some calculations.
See #83032 and the relevant code for more background info.
Thanks, I'll confirm then
Thanks @Sean-Kim for handling this :D