Fix #122856: Sculpt trim and filter tools do not show brush cursor

This commit adds a new poll function specifically for determining if the
sculpt cursor should be drawn. This function whitelists a hardcoded set
of non-brush operators to display the cursor for.

In testing, this extra check has negligable performance impact. On
average it takes 0.012ms per execution.

Pull Request: https://projects.blender.org/blender/blender/pulls/123570